@@ -657,6 +657,19 @@ static void c_ast_explain_declaration( c_ast_t const *ast ) {
 }
 
 /**
+ * Creates a pointer AST to \a ast.
+ *
+ * @param ast The AST to create a pointer to.
+ * @return Returns the new pointer AST.
+ */
+c_ast_t* c_ast_pointer( c_ast_t *ast ) {
+  c_ast_t *const ptr_ast = c_ast_new_gc( K_POINTER, &ast->loc );
+  ptr_ast->sname = c_ast_take_name( ast );
+  c_ast_set_parent( ast, ptr_ast );
+  return ptr_ast;
+}
+
+/**
  * Prints an additional parsing error message including a newline to standard
  * error that continues from where yyerror() left off.  Additionally:
  *
@@ -2942,6 +2955,17 @@ decl_list_english
       DUMP_START( "decl_list_english", "decl_english_ast" );
       DUMP_AST( "decl_english_ast", $1 );
 
+      if ( $1->kind_id == K_FUNCTION ) {
+        //
+        // From the C standard, section 6.3.2.1(4):
+        //
+        //    [A] function designator with type "function returning type" is
+        //    converted to an expression that has type "pointer to function
+        //    returning type."
+        //
+        $1 = c_ast_pointer( $1 );
+      }
+
       slist_init( &$$ );
       slist_push_tail( &$$, $1 );
 
@@ -2953,7 +2977,7 @@ decl_list_english
     {
       DUMP_START( "decl_list_english",
                   "decl_list_english',' decl_english_ast" );
-      DUMP_AST_LIST( "decl_list_english_opt", $1 );
+      DUMP_AST_LIST( "decl_list_english", $1 );
       DUMP_AST( "decl_english_ast", $3 );
 
       $$ = $1;
@@ -4350,6 +4374,9 @@ param_c_ast
       DUMP_AST( "cast_c_astp_opt", $3.ast );
 
       $$ = c_ast_patch_placeholder( $1, $3.ast );
+
+      if ( $$->kind_id == K_FUNCTION )
+        $$ = c_ast_pointer( $$ );       // see the comment in decl_english_ast
 
       DUMP_AST( "param_c_ast", $$ );
       DUMP_END();
