@@ -1,0 +1,1 @@
+cdecl @ @ @ declare f as function (g as function returning int) returning void @ 0
